SEMI-STABLE - NOT BEEN TESTED & REVIEWED PROPERLY
Completely reconfigured tests to work with database manipulation as opposed to JSON manipulation
Added more verbose-ness to some tests to cover some uncovered lines
Added FetchSingleAccountData to this branch
Got rid of all example code & added them as text files so Sonar doesn't pick them up in the line coverage calculation
Semi-added error Handlebars template for handling exceptions during runtime (needs expanded across all methods using Handlebar templates)